updated documentation and readme

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,15 @@
 <html>
 
 <head>
-  <title>Express</title>
+  <title>AWS Assignment</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>Simple API - AWS Assignment</h1>
+  <p>Welcome ! This Api simply double a given number ! Try it out :</p>
+  <a href="http://aws.nicolasmercier.io/api/v1/numbers/43">aws.nicolasmercier.io/api/v1/numbers/43</a>
+  <p>You can find documentation <a href="http://aws.nicolasmercier.io/documentation">here</a></p>
 </body>
 
 </html>
