--- a/public/documentation/index.html
+++ b/public/documentation/index.html
@@ -762,7 +762,7 @@
 
                         <div class="tab-content">
                           <div class="tab-pane active" id="examples-Default-double-0-curl">
-                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "https://aws.nicolasmercier.io/api/v1/numbers/{number}"</code></pre>
+                            <pre class="prettyprint"><code class="language-bsh">curl -X GET "http://aws.nicolasmercier.io/api/v1/numbers/{number}"</code></pre>
                           </div>
                           <div class="tab-pane" id="examples-Default-double-0-java">
                             <pre class="prettyprint"><code class="language-java">import io.swagger.client.*;
